--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-stencil",
-  "homepage": "/CS1300_Development/",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
